--- a/Desafio_Bootcamp.ipynb
+++ b/Desafio_Bootcamp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPN3K9FzXP461tY8uCyQNV0",
+      "authorship_tag": "ABX9TyN1CWBV5GiZzBNCSzYolfrA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "uAHa7DuGDrFG"
       },
@@ -166,7 +166,7 @@
       "metadata": {
         "id": "nFH_NBJgg8tv"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -186,7 +186,7 @@
       "metadata": {
         "id": "_IWyyaPioxVE"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "V52za04-cdzf"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -252,7 +252,7 @@
       "metadata": {
         "id": "CJnGAAhRcZ9x"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
       "metadata": {
         "id": "4Jglz2a3JXb7"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -324,7 +324,7 @@
       "metadata": {
         "id": "8uOML3NLxHAs"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -482,7 +482,7 @@
       "metadata": {
         "id": "3ZBft1NjMK9U"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -516,9 +516,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LW3ICnWXSpdP",
-        "outputId": "fb9cc190-316f-452c-dec5-4528544c21cd"
+        "outputId": "f3009fd0-4866-48b5-bf00-065436849309"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,9 +542,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c1130c1a-7965-4000-8bcd-52f2043d27b3"
+        "outputId": "a74017e9-6165-45dd-b9e4-aa181677038e"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,9 +568,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "df7e8762-2b1f-4fa6-9605-468974563598"
+        "outputId": "4092dd0e-e89a-4a09-9a09-c5cafdd592e0"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -580,7 +580,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 29
         }
       ]
     },
@@ -598,9 +598,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1fd3e1b1-5dc9-4b38-825d-3a4cd893afac"
+        "outputId": "a87f45e7-a7b0-4142-b7e8-0a39ed1fa2a9"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -610,7 +610,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 30
         }
       ]
     },
@@ -628,9 +628,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eaec2cf1-4276-4b2b-e406-cf3fb561f06a"
+        "outputId": "bdfcd542-51e0-4ca5-df54-be3361046e09"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,7 +640,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 31
         }
       ]
     },
@@ -656,9 +656,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9753c788-b492-4467-9ed3-16d17c06eaaa"
+        "outputId": "1cd50226-d478-4649-ce63-4fc831d87775"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -682,9 +682,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "192adeec-bf95-45db-a49d-e2a9ab64aa13"
+        "outputId": "937e2b93-acb1-4fd7-e4bd-077444459e9c"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -694,7 +694,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 33
         }
       ]
     },
@@ -738,7 +738,7 @@
       "metadata": {
         "id": "uBCW4WjXShjX"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -771,10 +771,10 @@
         "    self.assertEqual(self.Investments1.remove_off_budget_packages(fake_detailed_package), [[[2,3,4],120,70],[[1,4],130,90]])\n",
         "  \n",
         "  def test_optimize(self):\n",
-        "    self.assertEqual(self.Investments1.remove_off_budget_packages(fake_on_budget_package), [[1,4],130,90])\n",
+        "    self.assertEqual(self.Investments1.optimize(fake_on_budget_package), [[1,4],130,90])\n",
         "\n",
         "  def test_get_optimal(self):\n",
-        "    self.assertEqual(self.Investments1.get_optimal, [[[1,4],130,90]])\n",
+        "    self.assertEqual(self.Investments1.get_optimal(), [[1,4],130,90])\n",
         "\n",
         " \n",
         "if __name__ == '__name__':\n",
@@ -783,7 +783,7 @@
       "metadata": {
         "id": "tf8d9HV3qwxS"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -793,12 +793,12 @@
       ],
       "metadata": {
         "id": "C-WT8tObO8dC",
-        "outputId": "d2365079-3ff9-4f13-dbf2-c03970283f9a",
+        "outputId": "63be5991-c708-49b7-88db-d7e72ebfb6e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -808,54 +808,27 @@
             "test_detail_all_packages (__main__.TestInvestmentsSet) ... ok\n",
             "test_enforce_constraints (__main__.TestInvestmentsSet) ... ok\n",
             "test_get_elements_combinations (__main__.TestInvestmentsSet) ... ok\n",
-            "test_get_optimal (__main__.TestInvestmentsSet) ... FAIL\n",
+            "test_get_optimal (__main__.TestInvestmentsSet) ... ok\n",
             "test_max_number_elements (__main__.TestInvestmentsSet) ... ok\n",
             "test_min_number_elements (__main__.TestInvestmentsSet) ... ok\n",
-            "test_optimize (__main__.TestInvestmentsSet) ... FAIL\n",
+            "test_optimize (__main__.TestInvestmentsSet) ... ok\n",
             "test_remove_off_budget_package (__main__.TestInvestmentsSet) ... ok\n",
             "\n",
-            "======================================================================\n",
-            "FAIL: test_get_optimal (__main__.TestInvestmentsSet)\n",
             "----------------------------------------------------------------------\n",
-            "Traceback (most recent call last):\n",
-            "  File \"<ipython-input-17-e58bef9a5303>\", line 31, in test_get_optimal\n",
-            "    self.assertEqual(self.Investments1.get_optimal, [[[1,4],130,90]])\n",
-            "AssertionError: <bound method InvestmentsSet.get_optimal [49 chars]290>> != [[[1, 4], 130, 90]]\n",
+            "Ran 9 tests in 0.021s\n",
             "\n",
-            "======================================================================\n",
-            "FAIL: test_optimize (__main__.TestInvestmentsSet)\n",
-            "----------------------------------------------------------------------\n",
-            "Traceback (most recent call last):\n",
-            "  File \"<ipython-input-17-e58bef9a5303>\", line 28, in test_optimize\n",
-            "    self.assertEqual(self.Investments1.remove_off_budget_packages(fake_on_budget_package), [[1,4],130,90])\n",
-            "AssertionError: Lists differ: [[[2, 3, 4], 120, 70], [[1, 4], 130, 90]] != [[1, 4], 130, 90]\n",
-            "\n",
-            "First differing element 0:\n",
-            "[[2, 3, 4], 120, 70]\n",
-            "[1, 4]\n",
-            "\n",
-            "Second list contains 1 additional elements.\n",
-            "First extra element 2:\n",
-            "90\n",
-            "\n",
-            "- [[[2, 3, 4], 120, 70], [[1, 4], 130, 90]]\n",
-            "+ [[1, 4], 130, 90]\n",
-            "\n",
-            "----------------------------------------------------------------------\n",
-            "Ran 9 tests in 0.022s\n",
-            "\n",
-            "FAILED (failures=2)\n"
+            "OK\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<unittest.main.TestProgram at 0x7fd022dadc90>"
+              "<unittest.main.TestProgram at 0x7f74f42df110>"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 43
         }
       ]
     }
