--- a/Optimization_problem_solving.ipynb
+++ b/Optimization_problem_solving.ipynb
@@ -105,7 +105,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "O seguinte algoritmo foi criado para detectar o pacote de investimentos ótimos (ou os pacotes, se forem vários) após receber *quaisquer conjuntos de dados* con os três elementos a seguir: <br>\n",
+        "O seguinte algoritmo foi criado para detectar o pacote de investimentos ótimos (ou os pacotes, se forem vários) após receber *quaisquer conjuntos de dados* com os três elementos a seguir: <br>\n",
         "\n",
         "1) Lista do total de investimentos possíveis, com seus números de identificação, descrição, custos e retornos esperados.\n",
         "\n",
